--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "doctrine/dbal": "^2.6",
         "intervention/image": "^2.4",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.4"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.4",
