--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "atayahmet/laravel-nestable": "^0.8.0",
         "barryvdh/laravel-debugbar": "^2.4",
         "doctrine/dbal": "^2.6",
+        "guidocella/eloquent-insert-on-duplicate-key": "^1.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
