--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,11 @@
         "php": ">=5.6.4",
         "atayahmet/laravel-nestable": "^0.8.0",
         "barryvdh/laravel-debugbar": "^2.4",
+        "buzz/laravel-google-captcha": "^2.1",
         "doctrine/dbal": "^2.6",
         "guidocella/eloquent-insert-on-duplicate-key": "^1.0",
         "intervention/image": "^2.4",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4"
     },
@@ -19,7 +20,7 @@
         "barryvdh/laravel-ide-helper": "^2.4",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~6.0"
     },
     "autoload": {
         "classmap": [
