--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4"
+        "laravelcollective/html": "^5.4",
+        "spatie/laravel-analytics": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.4",
