Work on the frontend

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
+        "php": "^7.0.20",
         "atayahmet/laravel-nestable": "^0.8.0",
         "barryvdh/laravel-debugbar": "^2.4",
         "barryvdh/laravel-elfinder": "^0.3.11",
